# flow-ngin

./: .gitignore  Cargo.toml  README.md  build.rs
docs/adr/: 0001-container-child-dispatch.md  0002-click-handling-strategy.md  0002-golden-image-test-hook.md  0003-input-data-flow.md  0004-input-value-representation.md  0005-ui-resize-strategy.md
examples/drawer/src/: main.rs
examples/game-ui/: Cargo.toml
examples/game-ui/src/: main.rs
examples/hitbox-playground/: Cargo.toml  PERF_ANALYSIS.md  build.rs  index.html  styles.css
examples/hitbox-playground/src/: collision_backend.rs  collision_manager.rs  gui.rs  gui_flow.rs  hitbox_overlay.rs  lib.rs  main.rs  overlay_flow.rs  partition_viz.rs  partition_viz_flow.rs  scene.rs  scene_flow.rs
examples/image/: Cargo.toml
examples/image/src/: main.rs
examples/space/: Cargo.toml
examples/space/assets/: Rock1.mtl
examples/space/src/: main.rs
examples/text/: Cargo.toml
examples/text/src/: main.rs
src/: camera.rs  context.rs  flow.rs  lib.rs  pick.rs  render.rs
src/data_structures/: block.rs  collision.rs  instance.rs  mipmapper.rs  mod.rs  model.rs  scene_graph.rs  texture.rs
src/pipelines/: basic.rs  blit.wgsl  block_shader.wgsl  gui.rs  icon.wgsl  light.rs  mipmapper.rs  mod.rs  pick.rs  pick_basic.wgsl  pick_gui.rs  pick_gui.wgsl  terrain.rs  terrain.wgsl  terrain8t.wgsl  transparent.rs  transparent.wgsl
src/resources/: animation.rs  mesh.rs  mod.rs  pick.rs  texture.rs
src/ui/: background.rs  button.rs  card.rs  checkbox.rs  container.rs  grid.rs  image.rs  layout.rs  mod.rs  slider.rs  text_input.rs  text_label.rs  value.rs  vstack.rs
tests/: anti_aliasing_golden_image_test.rs  atlas_bleeding_test.rs  card_golden_image_test.rs  composite_ui_golden_image_test.rs  empty_render_test.rs  gltf_inverted_tangents_bug_regression_test.rs  gltf_metallic_factor_test.rs  gltf_wrong_tex_coords_bug_regression_test.rs  golden_image_test.rs  obj_normal_map_lighting_regression_test.rs  uniflow_integration_test.rs
tests/common/: test_utils.rs
