[package]
name = "flow-ngin"
version = "0.1.7"
edition = "2024"
authors = ["wuermseer.florian@gmail.com"]
description = "A simple cross-plattform instancing-oriented game engine with focus on full WASM-compatibility."
homepage = "https://github.com/FWuermse/flow-ngin"
license = "Apache-2.0"
license-file = "LICENSE"
documentation = "https://docs.rs/flow-ngin"
keywords = ["flow", "engine", "wasm"]
categories = ["graphics", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
integration-tests = []

[build-dependencies]
anyhow = "1.0.100"
fs_extra = "1.3.0"
glob = "0.3.3"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
cgmath = "0.18.0"
gltf = "1.4.1"
image = "0.25.9"
log = "0.4.28"
instant = "0.1.13"
# TOOD: retire this one soon
tobj = { version = "4.0.3", default-features = false, features = ["async"] }
wgpu = "27.0.1"
winit = "0.30.12"
env_logger = "0.11.8"
futures = "0.3.31"
futures-intrusive = "0.5.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.47", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
wgpu = { version = "27.0.1", features = ["webgl"] }
wasm-bindgen = "0.2.105"
reqwest = { version = "0.12.24" }
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3.82", features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }
