[package]
name = "flow-ngin"
version = "0.1.14"
edition = "2024"
authors = ["wuermseer.florian@gmail.com"]
description = "A simple cross-plattform instancing-oriented game engine with focus on full WASM-compatibility."
homepage = "https://github.com/FWuermse/flow-ngin"
license = "Apache-2.0"
license-file = "LICENSE"
documentation = "https://docs.rs/flow-ngin"
keywords = ["flow", "engine", "wasm"]
categories = ["graphics", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
integration-tests = []
ui = ["dep:glyphon"]

[build-dependencies]
anyhow = "1.0.102"
fs_extra = "1.3.0"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
glyphon = { version = "0.10", optional = true }
cgmath = "0.18.0"
gltf = "1.4.1"
image = "0.25.10"
log = "0.4.29"
instant = "0.1.13"
# TODO: retire this one soon
tobj = { version = "4.0.3", default-features = false, features = ["async"] }
wgpu = "29.0.1"
winit = "0.30.13"
env_logger = "0.11.10"
futures = "0.3.32"
futures-intrusive = "0.5.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.51", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
wgpu = { version = "29.0.1", features = ["webgl", "fragile-send-sync-non-atomic-wasm"] }
wasm-bindgen = "0.2.117"
reqwest = { version = "0.13.2" }
wasm-bindgen-futures = "0.4.67"
web-sys = { version = "0.3.94", features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }
