[package]
name = "hitbox-playground"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "hitbox-playground"
path = "src/main.rs"

[dependencies]
flow-ngin = { path = "../../", features = ["ui"] }
bytemuck = { version = "1", features = ["derive"] }
# Direct dependency so `cgmath::Matrix3` can be named unambiguously: flow-ngin
# re-exports both `cgmath::*` and `wgpu::*`, and both define a `Matrix3`.
cgmath = "0.18"
wgpu = "29"
winit = "0.30"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
